--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ debug: true
 #security.basic.enabled: false
 
 # data base
-spring.datasource.url = jdbc:mariadb://localhost:3306/fdb_db
+spring.datasource.url = jdbc:mariadb://localhost:3306/fbm_db
 spring.datasource.username = root
 spring.datasource.password = abc123
 
